####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libedio.a

INCLUDES = -I$(top_srcdir)/include -I$(top_srcdir)/src

libedio_a_METASOURCES = AUTO

libedio_a_SOURCES = reactorindex.cpp fdindex.cpp kqueuer.cpp epoll.cpp \
rtsigio.cpp ediostream.cpp outputbuf.cpp cacheos.cpp inputstream.cpp \
bufferedos.cpp outputstream.cpp flowcontrol.cpp iochain.cpp \
multiplexerfactory.cpp eventreactor.cpp poller.cpp multiplexer.cpp \
pollfdreactor.cpp lookupfd.cpp devpoller.cpp socketlistener.cpp \
sockconnprocessor.cpp evtcbque.cpp sigeventdispatcher.cpp eventnotifier.cpp \
aioeventhandler.cpp aiooutputstream.cpp 


EXTRA_DIST = devpoller.cpp lookupfd.cpp lookupfd.h pollfdreactor.cpp \
pollfdreactor.h multiplexer.cpp multiplexer.h poller.cpp poller.h \
eventreactor.cpp eventreactor.h multiplexerfactory.cpp multiplexerfactory.h \
iochain.cpp iochain.h flowcontrol.cpp flowcontrol.h outputstream.cpp \
outputstream.h bufferedos.cpp bufferedos.h inputstream.cpp inputstream.h \
cacheos.h cacheos.cpp outputbuf.cpp outputbuf.h ediostream.cpp ediostream.h \
rtsigio.cpp rtsigio.h epoll.cpp epoll.h kqueuer.cpp kqueuer.h devpoller.h \
fdindex.cpp fdindex.h reactorindex.cpp reactorindex.h socketlistener.cpp \
socketlistener.h sockconnprocessor.cpp sockconnprocessor.h

####### kdevelop will overwrite this part!!! (end)############
