####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = liblcrepl.a

INCLUDES = -I$(top_srcdir)/include -I$(top_srcdir)/src

liblcrepl_a_METASOURCES = AUTO

liblcrepl_a_SOURCES = config.cpp lcreplconf.cpp lcreplreceiver.cpp \
	lcshmevent.cpp replshmhelper.cpp lcnodeinfo.cpp lcreplgroup.cpp lcreplsender.cpp \
	replicableshmtid.cpp  replshmtidcontainer.cpp

####### kdevelop will overwrite this part!!! (end)############
