####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = liblsmemcache.a

INCLUDES = -I$(top_srcdir)/include -I$(top_srcdir)/src

liblsmemcache_a_METASOURCES = AUTO

liblsmemcache_a_SOURCES = lsmchashmulti.cpp lsmcsasl.cpp lsmemcache.cpp \
    rolememcache.cpp memcacheconn.cpp memcachelistener.cpp

####### kdevelop will overwrite this part!!! (end)############
