####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = librepl.a

INCLUDES = -I$(top_srcdir)/include -I$(top_srcdir)/src

librepl_a_METASOURCES = AUTO

librepl_a_SOURCES = replprgrsstrkr.cpp gzipstream.cpp replconf.cpp \
        replconn.cpp replcontainer.cpp sockconn.cpp  \
        replgroup.cpp replicable.cpp replicablelruhash.cpp \
        repllistener.cpp nodeinfo.cpp repldef.cpp\
        replpacker.cpp replpacket.cpp replreceiver.cpp \
        replregistry.cpp replsender.cpp bulkreplctx.cpp \
        replsyncauditor.cpp lruhashreplbridge.cpp

####### kdevelop will overwrite this part!!! (end)############
