####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libsocket.a

INCLUDES = -I$(top_srcdir)/include -I$(top_srcdir)/src

libsocket_a_METASOURCES = AUTO

libsocket_a_SOURCES = gsockaddr.cpp coresocket.cpp 


EXTRA_DIST = coresocket.cpp coresocket.h sockdef.h gsockaddr.cpp gsockaddr.h 

####### kdevelop will overwrite this part!!! (end)############
